styles/Home.module.scss
@import './vaiables.scss';

.sub_heading {
  width: 38.25rem;
  margin: 0 auto 1.5rem auto;
}

.powered_by {
  width: 50%;
  margin: 1.5rem auto 1rem auto;
}

.whoweare {
  padding-top: 3rem;
  padding-bottom: 3rem;
  .info {
    text-align: center;
    .experience {
      display: flex;
      justify-content: space-around;
    }
  }
  .whoweare_des {
    padding: 5rem 0 0;
  }
  .img_block {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    gap: 1rem;
    img {
      width: 100px;
      height: 100px;
      object-fit: contain;
    }
  }
}

.how_we_work {
  padding-bottom: 4rem;
  h2 {
    margin-bottom: 2.5rem;
  }

  h3 {
    font-size: 1.1rem;
  }
  .grid_block {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 2rem;
    padding-top: 1rem;
  }
  .icon {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 54px;
    height: 53px;
    margin-bottom: 1rem;
    padding: 0.3rem 0.8rem;
    background-color: $clr-grey-100;
    border-radius: 100%;
    box-shadow: 0px 0px 5px 0px #f7faff;
  }
}

.services {
  padding: 3rem 0 4rem 0;
  background: $clr-grey-100;
  text-align: center;
  h2 {
    &:after{
      width: 9.5rem;
      margin: 0 auto 1rem auto;
    }
  }
  h3 {
    padding-bottom: 2.125rem;
  }
  .learn_more {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
    font-size: 0.8125rem;
    &:hover {
      color: $clr-green-400;
    }
  }
}

.pricing {
  padding-top: 3rem;
  text-align: center;
  h2 {
    &:after{
      margin: 0 auto 1rem auto;
    }
  }
  .pricing_card_block {
    display: flex;
    justify-content: center;
    gap: 3rem;
    padding: 2rem 0;
  }
  .pricing_card {
    display: flex;
    flex-direction: column;
    width: 16.6875rem;
    padding: 1rem 1.5rem 3.5rem;
    border: 1px solid $clr-blue-900;
    border-radius: 12px;
    transition: transform 0.3s ease;
    cursor: pointer;
    &:hover, &.active {
      background: $clr-blue-900;
      color: $clr-white;
      transform: translateY(-10px);
    }
    .pricing_card_heading {
      font-size: 1.375rem;
    }
    .pricing_card_icon{
      display: flex;
      justify-content: center;
      align-items: center;
      width: 55px;
      height: 55px;
      margin: 0 auto 1rem auto;
      background: $clr-grey-200;
      border-radius: 100%;
    }
    .pricing_card_des {
      flex: 1;
    }
  }
}

.success {
  padding-top: 6rem;
  padding-bottom: 4rem;
  background: $clr-blue-900;
  clip-path: polygon(0 20%, 100% 0%, 100% 100%, 0% 100%);
  color: $clr-white;
  h2 {
    &:after {
      width: 18rem;
      background-size: contain;
      margin: auto;
    }
  }
  .success_card_block {
    display: flex;
    justify-content: center;
    gap: 3rem;
    padding-top: 2rem;
    padding-bottom: 3rem;
  }
}
.success_card {
  width: 16.625rem;
  overflow: hidden;
  border-radius: 12px;
  background: $clr-white;
  border: 1px solid $clr-green-400;
  transition: transform 0.3s ease;
  cursor: pointer;
  &:hover {
    transform: scale(1.1);
  }
  h3 {
    font-size: 1rem;
    line-height: 1.3;
  }
  .success_card_img {
    width: 270px;
    height: 160px;
    span {
      padding: 0 !important;
      aspect-ratio: 3/1.8;
    }
    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }
  .success_card_des {
    padding: 1rem;
  }
}

.technologies {
  padding-top: 6rem;
  padding-bottom: 6rem;
  background: url('https://res.cloudinary.com/dcfzux5xq/image/upload/q_auto/v1662729602/Techdots/images/img_side_am64jg.svg') no-repeat;
  background-position: bottom 40px left;
  h2 {
    padding-bottom: 1rem;
  }
  .technologies_stack {
    display: flex;
    flex-wrap: wrap;
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    gap: 1rem;
    padding-top: 1rem;
    padding-bottom: 5rem;
  }
}

@media (max-width: 991px) {
  .whoweare {
    .img_block {
      justify-content: center;
      margin-top: 1.5rem;
    }
    .whoweare_des {
      padding-top: 2rem;
    }
  }

  .pricing {
    .pricing_card_block {
      gap: 1rem;
    }
  }

  .success {
    clip-path: none;
    padding-top: 3rem;
    .success_card_block {
      flex-wrap: wrap;
      gap: 1rem;
    }
    .success_card {
      width: 14rem;
    }
  }

  .technologies {
    background: none;
    .technologies_stack {
      grid-template-columns: repeat(5, 1fr);
    }
  }
}

@media(max-width: 767px) {
  .sub_heading {
    width: 100%;
  }

  .how_we_work {
    .grid_block {
      grid-template-columns: 1fr;
      gap: 0;
    }
  }

  .whoweare {
    padding-top: 2rem;
    h2 {
      margin-bottom: 2rem !important;
      text-align: center;
      &:after {
        margin: auto;
      }
    }
    .info {
      .experience {
        flex-direction: column;
        row-gap: 1rem;
      }
    }
  }

  .how_we_work {
    text-align: center;
    .grid_block {
      padding-top: 0;
    }
  }

  .services {
    h2 {
      margin-bottom: 2rem;
    }

    h3 {
      padding-top: 1rem;
      padding-bottom: 1rem;
    }
    .btn {
      margin-top: 1rem;
      display: block;
    }
  }

  .pricing {
    padding-bottom: 1.5rem;
    padding-top: 2rem;
    .sub_heading {
      margin-top: 2rem;
    }
    .pricing_card_block {
      display: grid;
      grid-template-columns: 1fr 1fr;
      padding-top: 1rem;
    }
    .pricing_card {
      width: 16.6875rem;
      &.active {
        transform: translate(0);
      }
    }
  }

  .success {
    h2 {
      margin-bottom: 2rem;
      &:after {
        width: 13rem;
      }
    }
  }

  .technologies {
    padding-top: 2.5rem;
    h2 {
      padding-bottom: 1.5rem;
      text-align: center;
    }
    .technologies_stack {
      grid-template-columns: repeat(4, 1fr);
      img {
        width: 70px !important;
        height: 70px !important;
      }
    }
  }
}

@media(max-width: 480px) {
  .pricing {
    .pricing_card_block {
      grid-template-columns: 1fr;
    }
    .pricing_card {
      width: 85%;
      margin: auto;
    }
  }
  .success {
    .success_card_block {
      padding-top: 1rem;
      gap: 1.5rem;
    }
    .success_card {
      width: 19rem;
      .success_card_img {
        width: 100%;
        height: 175px;
      }
    }
  }
}

